<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/old_pwd_editText"
        style="@style/register_editText"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:hint="@string/txt_old_pwd"
        android:textSize="@dimen/text_h2"
        android:drawableRight="@drawable/empty_edittext_drawable_right"
        android:inputType="textPassword"
        android:maxLength="@integer/pwd_max_length" />

    <EditText
        android:id="@+id/new_pwd_editText"
        style="@style/register_editText"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:hint="@string/txt_new_pwd"
        android:textSize="@dimen/text_h2"
        android:drawableRight="@drawable/empty_edittext_drawable_right"
        android:maxLength="@integer/pwd_max_length"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/confirm_pwd_editText"
        style="@style/register_editText"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:hint="@string/txt_confirm_pwd"
        android:textSize="@dimen/text_h2"
        android:drawableRight="@drawable/empty_edittext_drawable_right"
        android:maxLength="@integer/pwd_max_length"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/next_step_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_h2"
        android:background="@drawable/holo_blue_btn_selector"
        android:onClick="onSubmitBtnClickListener"
        android:text="@string/btn_submit" />
    
</LinearLayout>
